# libredxx-ft260

example/: CMakeLists.txt  ez_sfp.c
libredxx/: CMakeLists.txt  libredxx.h  libredxx_ft260.c  libredxx_ft260.h  libredxx_linux.c  libredxx_windows.c
